# Effective-Mobile-Test-Task

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  setup.cfg
.github/workflows/: django.yml
fixtures/: dishes-fixture.json  orders-fixture.json
nginx/: Dockerfile  nginx.conf
online_cafe/: manage.py
online_cafe/main_page/: models.py  urls.py  views.py
online_cafe/main_page/templates/main_page/: main-page.html
online_cafe/menu/: factories.py  models.py  views.py
online_cafe/menu/management/commands/: create_dishes.py
online_cafe/menu/migrations/: 0001_initial.py
online_cafe/online_cafe/: asgi.py  settings.py  urls.py  wsgi.py
online_cafe/online_cafe/templates/: base.html
online_cafe/orders/: api.py  factories.py  models.py  serializers.py  tests.py  urls.py  views.py
online_cafe/orders/management/commands/: create_orders.py
online_cafe/orders/migrations/: 0001_initial.py  0002_alter_order_id.py  0003_alter_order_options_alter_order_items_and_more.py
online_cafe/orders/templates/orders/: orders-create.html  orders-delete.html  orders-detail.html  orders-list.html  orders-revenue.html  orders-update.html
